# yodosha_book_2024

./: LICENSE  README.md
data/: Enamine_FDA_approved_Drugs_1123cmpds_20231109.sdf  enamine_fda_processed.csv  enamine_fda_removal_znumbers.txt  ipab_processed.csv  lig_1.mol2  lig_1.pdbqt  lig_1.sdf  lig_2.sdf  lig_3.sdf  receptor.pdbqt
protocols/autodock_vina/: README.md  analyze_results.ipynb  config.txt  config_single_molecule.txt  get_ligand_coordinate.py  preprocessing.py  pyproject.toml  run_docking_multiple_mols.py
protocols/autodock_vina/results_fda/: docked.csv
protocols/autodock_vina/results_ipab/: docked.csv
protocols/diffdock/: README.md  analyze_results.ipynb  calc_results.py  docked_fda.csv  docked_ipab.csv  make_input_csv.py
protocols/karmadock/: README.md  analyze_results.ipynb  csv2tsv.py
protocols/karmadock/results_fda/: score.csv
protocols/karmadock/results_ipab/: score.csv
protocols/unidock/: README.md  analyze_results.ipynb  config.txt  smi2pdbqt.py
protocols/unidock/results_fda/: score.csv
protocols/unidock/results_ipab/: score.csv
